@@ -1,5 +1,10 @@
 2004-05-26  Todd Berman  <tberman@sevenl.net>
 
+	* Services/Project/DefaultProjectService.cs: auto-generate makefiles
+	on changes. I think i hit all the needed events, lets see.
+
+2004-05-26  Todd Berman  <tberman@sevenl.net>
+
 	* Services/ParserService/DefaultParserService.cs: Update Monodoc
 	and IsAs resolvers.
 	* Services/ParserService/IParserService.cs: Expose new search type
